--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-  body {
-  background-color: #bebebe;
-  font: 200 1em ‘Helvetica Neue’;
+body {
+  font-family: 'Helvetica Neue';
+  font-weight: 200;
   color: #ffffff;
 }
 
@@ -41,9 +41,8 @@
   height: 208px;
   margin: auto;
   border-radius: 10px;
-  background-color: rgb(0, 0, 0);
-  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
-  opacity: 0.8;
+  background-color: rgba(0, 0, 0, 0.4);
+  box-shadow: 0 20px 40px 0.1px rgba(0, 0, 0, 0.3);
 }
 
 .dropicon {
@@ -72,7 +71,7 @@
 
 .humidity {
   position: absolute;
-  top: 19px;
+  top: 5%;
   left: 29px;
   z-index: 2;
   width: 46px;
@@ -91,17 +90,16 @@
   width: 163px;
   height: 59px;
   border-bottom-right-radius: 10px;
-  background-color: #1ab1ed;
+  background-color: rgba(26,177,237, 1);
 }
 
 .location {
   position: absolute;
   top: 128px;
-  left: 63px;
-  z-index: 8;
-  width: 108px;
+  left: 5%;
+  width: 250px;
   min-height: 59px;
-  font-size: 1.313em;
+  font-size: 0.8rem;
   font-weight: 400;
   line-height: 1.38;
   text-transform: uppercase;
@@ -110,15 +108,12 @@
 
 .temperature {
   position: absolute;
-  top: 38px;
-  left: 72px;
-  z-index: 7;
+  margin: auto 0;
+  top: 10%;
+  left: 12%;
   width: 109px;
   min-height: 28px;
-  font-size: 4.25em;
-  font-weight: 700;
-  line-height: 1.38;
-  color: rgb(255, 255, 255);
+  font-size: 6rem;
 }
 
 .windicon {
@@ -134,9 +129,9 @@
 
 .windspeed {
   position: absolute;
-  top: 9px;
   left: 109px;
   width: 50px;
+  top: 27%;
   min-height: 29px;
   font-size: 1em;
   line-height: 1.38;
@@ -145,5 +140,5 @@
 }
 
 .windspeed p {
-  margin-bottom: -.2em;
+	margin-top: -5px;
 }
