--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,13 @@ body {
   color: #ffffff;
 }
 
+.main {
+	width: 235px;
+	height: 208px;
+	position: relative;
+	padding: 0;
+}
+
 .info_bg p {
   margin-bottom: -.2em;
 }
@@ -36,12 +43,11 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 9;
   width: 398px;
   height: 208px;
   margin: auto;
   border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.4);
+  background: linear-gradient(rgba(43,  43,  43, 0.8), rgba(74, 74, 74, 0.7)); 
   box-shadow: 0 20px 40px 0.1px rgba(0, 0, 0, 0.3);
 }
 
@@ -94,26 +100,21 @@ body {
 }
 
 .location {
-  position: absolute;
-  top: 128px;
-  left: 5%;
-  width: 250px;
-  min-height: 59px;
-  font-size: 0.8rem;
-  font-weight: 400;
-  line-height: 1.38;
   text-transform: uppercase;
-  color: rgb(255, 255, 255);
+  text-align: center;
+  vertical-align: middle;
+  letter-spacing: 2px;
+  font-size: 13px;
+  margin-top: 20px;
 }
 
 .temperature {
-  position: absolute;
-  margin: auto 0;
-  top: 10%;
-  left: 12%;
-  width: 109px;
-  min-height: 28px;
+  margin: 0;
+  margin-left: 15px;
+  margin-top: 20px;
   font-size: 6rem;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .windicon {
@@ -142,3 +143,71 @@ body {
 .windspeed p {
 	margin-top: -5px;
 }
+
+.toggle-degree {
+	top: 75%;
+	left: 83%;
+	position: absolute;
+	font-size: 10px;
+	font-weight: bold;
+}
+
+#toggle {
+	max-height: 0;
+	max-width: 0;
+	opacity: 0;
+}
+
+input#toggle + label {
+  display: block;
+  position: relative;
+  margin-top: -10px;
+  box-shadow: inset 0 0 0px 1px #d5d5d5;
+  height: 16px;
+  width: 30px;
+  border-radius: 8px;
+  color: #575454;
+}
+
+input#toggle + label:before {
+  line-height: 16px;
+  text-align: center;
+  content: "";
+  position: absolute;
+  display: block;
+  height: 16px;
+  width: 16px;
+  top: 0;
+  left: 0;
+  border-radius: 8px;
+  background: rgba(19, 191, 17, 0);
+  transition: all .4s ease;
+  }
+
+input#toggle + label:after {
+  content: 'F';
+  text-align: center;
+  line-height: 16px;
+  position: absolute;
+  display: block;
+  height: 16px;
+  width: 16px;
+  top: 0;
+  left: 0px;
+  border-radius: 8px;
+  background: white;
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .2), 0 2px 4px rgba(0, 0, 0, .2);
+  transition: all 1s ease;
+}
+
+input#toggle:checked + label:before {
+  width: 30px;
+  background: rgba(19, 191, 17, 1);
+}
+
+input#toggle:checked + label:after {
+  content: 'C';
+  left: 14px;
+  box-shadow: inset 0 0 0 1px rgba(19, 191, 17, 1), 0 2px 4px rgba(0, 0, 0, .2);
+  transition: all 1s ease;
+ }
